# ProjectCharisma

./: README.md  project.json  pyproject.toml
charisma-editor/: editor.py
charisma-engine/: game.py
charisma-engine/engine/: models.py  state.py
charisma_common/: models.py
data/: units.json
